# tether-soundscape-rs

./: .gitignore  Cargo.toml  README.md  demo.json  dist-workspace.toml  soundscape-widgets.json  test.json  test_bank.json  test_mono.json  test_stereo.json
assets/sounds/demo/: ding-dong-mono.wav.asd  frog-mono.wav.asd  frog.wav.asd  mice.wav.asd  squirrel.wav.asd
bindings/: SceneMessage.ts  SingleClipMessage.ts
src/: loader.rs  main.rs  model.rs  panning.rs  playback.rs  remote_control.rs  settings.rs  tether.rs  ui.rs  utils.rs
src/remote_control/: mod.rs  publish.rs  receive.rs
src/ui/: clips_section.rs  local_controls.rs  mod.rs  status_section.rs
wix/: main.wxs
