[package]
name = "tether-soundscape"
version = "0.4.1"
edition = "2021"
description = "A remote-controllable audio sequencer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RandomStudio/tether-soundscape-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tether-agent = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
paho-mqtt = "0.11.1"
tween = "2.0.0"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.7"
log = "0.4.17"
rand = "0.8.5"
eframe = "0.22.0"
egui = "0.22.0"
rodio = "0.17.1"
